--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,38 +1,92 @@
 .container {
   /* margin: up right down left */
-  margin: 5% 20%;
-  padding: 10%;
+  margin: 0px 32%;
+  padding: 9% 5%;
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: dimgrey;
+  background-color: rgba(165, 165, 165, 0.726);
+  border-radius: 15px;
+  box-shadow: 5px 5px 6px rgba(0, 0, 0, 0.6);
 }
 
 .section {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    white-space: nowrap; 
-    overflow: hidden;
-    text-overflow: ellipsis;
+  color: #303030;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .label {
-  margin: 0.8rem;
+  margin: 0.3rem 0px;
+  font-size: large;
 }
 
-.input {
-    width: 90%;
+.input, .inputError {
+  width: 98%;
+  height: 2rem;
+  text-indent: 10px;
+  font-size: medium;
+  outline: none;
+  border-radius: 10px;
+  border: solid 2px #363636;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
+}
+
+.inputError {
+  border: solid 2px rgb(201, 19, 19);
 }
 
 .submit {
-  margin: 0.8rem;
+  margin-top: 1.2rem;
+  width: 100%;
+  height: 2.8rem;
+  border-radius: 10px;
+  color: #3d3109;
+  font-size: 1.6em;
+  font-weight: 600;
+  letter-spacing: 3px;
+  background-color: rgb(235, 221, 99);
+  border: solid 2px rgb(102, 97, 50);
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
 }
 
-.error {
-    color: rgb(180, 0, 0);
+.submit:hover {
+  color: rgb(230, 219, 126);
+  background-color: #ac9646;
+  cursor: pointer;
+}
+
+.error,
+.errorPlaceholder {
+  margin: 0.3rem 0px;
+  color: rgb(180, 0, 0);
+}
+
+.errorPlaceholder {
+  color: #00000000;
+}
+
+.title {
+  position: absolute;
+  top: 6%;
+  left: 14%;
+}
+
+.forgotPassword {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  margin-top: 0;
+  font-size: medium;
+}
+
+.forgotPassword p:hover {
+  cursor: pointer;
+  color: #585858;
 }
