--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,22 +1,39 @@
 .container {
-    position: fixed;
-    display: flex;
-    width: 100%;
-    height: 80px;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #202020af;
-    z-index: 3;
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 80px;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #202020af;
+  z-index: 3;
 }
 
 .container2 {
-    display: flex;
-    width: 50%;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  width: 50%;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .navigationButton {
-    width: 5rem;
-    height: 1.5rem;
+  width: 5rem;
+  height: 1.5rem;
+}
+
+.language,
+.logoutButton {
+  height: 25px;
+  width: 30px;
+  font-size: medium;
+  text-align: center;
+  line-height: 25px;
+  color: #555;
+  border-radius: 8px;
+  border-style: hidden;
+}
+
+.language:hover,
+.logoutButton:hover {
+  background-color: #ccc;
 }
