--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -13,12 +13,12 @@
 }
 
 .section {
-  color: #303030;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  color: #303030;
 }
 
 .label {
@@ -26,19 +26,42 @@
   font-size: large;
 }
 
-.input, .inputError {
+.input,
+.inputError {
   width: 98%;
   height: 2rem;
   text-indent: 10px;
   font-size: medium;
   outline: none;
   border-radius: 10px;
-  border: solid 2px #363636;
+  border-style: hidden;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
 }
 
 .inputError {
   border: solid 2px rgb(201, 19, 19);
+}
+
+.inputPassword {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.inputPassword .input, .inputPassword .inputError {
+  border-radius: 8px 0 0 8px;
+  box-shadow: -1px 1px 4px rgba(0, 0, 0, 0.6);
+}
+
+.visibility {
+  height: 100%;
+  width: 40px;
+  font-size: medium;
+  color: #555;
+  background-color: #fff;
+  border-style: hidden;
+  border-radius: 0 8px 8px 0;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
 }
 
 .submit {
