--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -17,23 +17,31 @@
 }
 
 .navigationButton {
-  width: 5rem;
-  height: 1.5rem;
+  border-style: hidden;
+  background-color: #ffffff00;
+  color: rgb(206, 206, 206);
+  font-size: large;
+  width: 8rem;
+  height: 2.5rem;
+}
+
+.navigationButton:hover {
+  color: white;
 }
 
 .language,
 .logoutButton {
-  height: 25px;
-  width: 30px;
-  font-size: medium;
+  height: 35px;
+  width: 40px;
+  font-size: larger;
   text-align: center;
   line-height: 25px;
-  color: #555;
-  border-radius: 8px;
+  color: rgb(206, 206, 206);
+  background-color: #ffffff00;
   border-style: hidden;
 }
 
 .language:hover,
 .logoutButton:hover {
-  background-color: #ccc;
+  color: white;
 }
