--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,21 +1,43 @@
 .containerFilters,
 .containerCards {
-  margin-left: 20px;
-  margin-right: 20px;
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
 }
 
 .containerFilters {
+  padding: 20px 0px 0px;
   justify-content: space-around;
+  background-color: #80808080;
 }
 
 .containerCards {
   justify-content: center;
+  margin-left: 20px;
+  margin-right: 20px;
   padding-bottom: 120px;
 }
 
 .containerGlobal {
-  padding-top: 110px;
+  padding-top: 80px;
+}
+
+.containerFilters select {
+  font-size: large;
+  color: rgb(206, 206, 206);
+  background-color: #ffffff00;
+  border-style: hidden;
+}
+
+.containerFilters option {
+  background-color: #303030;
+}
+
+.containerFilters select:hover {
+  color: white;
+  cursor: pointer;
+}
+
+.containerFilters option:hover {
+  background-color: #707070;
 }
