--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -13,8 +13,7 @@
 
 .containerCards {
   justify-content: center;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 20px 20px 20px 0px;
   padding-bottom: 120px;
 }
 
