--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -2,7 +2,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  overflow: hidden;
   background-image: url("resources/images/space-background.png");
   background-size: cover;
   background-position: center;
