--- a/Client/src/components/DetailComponent/DetailComponent.module.css
+++ b/Client/src/components/DetailComponent/DetailComponent.module.css
@@ -53,5 +53,6 @@
   color: rgb(236, 236, 236);
   background-color: rgba(0, 0, 0, 0.226);
   font-size: larger;
-  text-indent: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
