--- a/Client/src/views/Detail/Detail.module.css
+++ b/Client/src/views/Detail/Detail.module.css
@@ -1,6 +1,25 @@
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+}
+
+.back {
+  height: 35px;
+  width: 40px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: larger;
+  text-align: center;
+  line-height: 25px;
+  color: rgb(206, 206, 206);
+  background-color: #ffffff00;
+  border-style: hidden;
+}
+
+.back:hover {
+  color: white;
+  cursor: pointer;
 }
