--- a/Client/src/components/DetailComponent/DetailComponent.module.css
+++ b/Client/src/components/DetailComponent/DetailComponent.module.css
@@ -35,6 +35,10 @@
   border-radius: 10px;
 }
 
+.imgDead {
+  filter: grayscale(100%);
+}
+
 .imageContainer .text {
   position: absolute;
   margin: 8px;
