--- a/Client/src/components/Form/Form.module.css
+++ b/Client/src/components/Form/Form.module.css
@@ -1,13 +1,14 @@
 .container {
   /* margin: up right down left */
-  margin: 0px 32%;
-  padding: 9% 5%;
+  width: 350px;
+  padding: 1.5% 3% 3%;
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgba(165, 165, 165, 0.726);
+  background-color: rgba(158, 158, 158, 0.548);
+  /* background-color: rgba(163, 101, 111, 0.548); */
   border-radius: 15px;
   box-shadow: 5px 5px 6px rgba(0, 0, 0, 0.6);
 }
@@ -22,7 +23,8 @@
 }
 
 .label {
-  margin: 0.3rem 0px;
+  margin: 1rem 0px 0.2rem;
+  color: #0e0e0e;
   font-size: large;
 }
 
@@ -48,7 +50,8 @@
   align-items: center;
 }
 
-.inputPassword .input, .inputPassword .inputError {
+.inputPassword .input,
+.inputPassword .inputError {
   border-radius: 8px 0 0 8px;
   box-shadow: -1px 1px 4px rgba(0, 0, 0, 0.6);
 }
@@ -64,23 +67,28 @@
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
 }
 
+.visibility:hover {
+  cursor: pointer;
+}
+
 .submit {
   margin-top: 1.2rem;
-  width: 100%;
+  width: 40%;
   height: 2.8rem;
   border-radius: 10px;
-  color: #3d3109;
-  font-size: 1.6em;
+  font-size: 1.4em;
   font-weight: 600;
   letter-spacing: 3px;
-  background-color: rgb(235, 221, 99);
-  border: solid 2px rgb(102, 97, 50);
+  color: #204b0f;
+  background-color: #4d8138;
+  text-shadow: #12300633 2px 2px 2px;
+  border: solid 0px;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
 }
 
 .submit:hover {
-  color: rgb(230, 219, 126);
-  background-color: #ac9646;
+  color: #8ed173;
+  background-color: #5b9146;
   cursor: pointer;
 }
 
@@ -90,26 +98,31 @@
   color: rgb(180, 0, 0);
 }
 
-.errorPlaceholder {
-  color: #00000000;
-}
-
 .title {
-  position: absolute;
-  top: 6%;
-  left: 14%;
+  width: 350px;
+  margin: 20px 0px 10px ;
+  color: #161616;
+  text-align: center;
+  font-size: 28px;
 }
 
 .forgotPassword {
   width: 100%;
+  height: 25px;
+  padding-top: 10px;
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
   margin-top: 0;
   font-size: medium;
 }
 
-.forgotPassword p:hover {
+.forgotPassword span {
+  color: #4de412;
+  text-shadow: #185300 2px 2px 2px;
+}
+
+.forgotPassword span:hover {
   cursor: pointer;
-  color: #585858;
+  color: #96d47d;
 }
