--- a/Client/src/components/Form/Form.module.css
+++ b/Client/src/components/Form/Form.module.css
@@ -26,6 +26,7 @@
   margin: 1rem 0px 0.2rem;
   color: #0e0e0e;
   font-size: large;
+  font-weight: 600;
 }
 
 .input,
@@ -79,16 +80,16 @@
   font-size: 1.4em;
   font-weight: 600;
   letter-spacing: 3px;
-  color: #204b0f;
-  background-color: #4d8138;
+  color: #8ed173;
+  background-color: #437031;
   text-shadow: #12300633 2px 2px 2px;
   border: solid 0px;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
 }
 
 .submit:hover {
-  color: #8ed173;
-  background-color: #5b9146;
+  color: #32661e;
+  background-color: #60944b;
   cursor: pointer;
 }
 
@@ -100,10 +101,12 @@
 
 .title {
   width: 350px;
-  margin: 20px 0px 10px ;
-  color: #161616;
+  margin: 10px 0px 15px;
+  color: #7ed66c;
+  text-shadow: #0e0e0e 2px 2px 6px;
   text-align: center;
-  font-size: 28px;
+  font-size: 32px;
+  letter-spacing: 2px;
 }
 
 .forgotPassword {
