--- a/Client/src/components/Nav/Nav.module.css
+++ b/Client/src/components/Nav/Nav.module.css
@@ -7,7 +7,7 @@
   justify-content: space-around;
   align-items: center;
   background-color: #202020af;
-  z-index: 3;
+  z-index: 5;
 }
 
 .container2 {
@@ -43,8 +43,47 @@
   border-style: hidden;
 }
 
-.language:hover,
+.language i:hover,
 .logoutButton:hover {
   color: white;
   cursor: pointer;
+}
+
+.dropdownContent {
+  height: 70px;
+  width: 120px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  top: 10px;
+  right: 95px;
+  background-color: #111111;
+  border: solid 1px rgb(184, 184, 184);
+  box-shadow: 2px 2px 10px rgba(170, 170, 170, 0.2),
+    2px -2px 10px rgba(170, 170, 170, 0.2),
+    -2px 2px 10px rgba(170, 170, 170, 0.2),
+    -2px -2px 10px rgba(170, 170, 170, 0.2);
+  font-size: large;
+  z-index: 5;
+  display: none;
+}
+
+.dropdownOption {
+  width: 100%;
+  padding: 5px 0px;
+  text-indent: 5px;
+  color: #bebebe;
+}
+.dropdownOption:hover {
+  background-color: #222222;
+  color: #f0f0f0;
+  cursor: pointer;
+}
+
+.language:hover .dropdownContent,
+.dropdownContent:hover,
+.dropdownOption:hover {
+  display: block;
 }
